--- a/index.html
+++ b/index.html
@@ -105,23 +105,9 @@
                         <div class="brand-img"><img
                                 src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/03.marcas/logo4.png?raw=true"
                                 alt="logo"></div>
-                        <div class="brand-img"><img
-                                src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/03.marcas/logo5.png?raw=true"
-                                alt="logo"></div>
-                        <div class="brand-img"><img
-                                src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/03.marcas/logo6.png?raw=true"
-                                alt="logo"></div>
-                        <div class="brand-img"><img
-                                src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/03.marcas/logo7.png?raw=true"
-                                alt="logo"></div>
-                        <div class="brand-img"><img
-                                src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/03.marcas/logo8.png?raw=true"
-                                alt="logo"></div>
                     </div>
                     <p class="col-md-8 col-xl-5">Es un honor para nosotros asociarnos con clientes visionarios que nos
-                        desafían a
-                        innovar y
-                        sobresalir.</p>
+                        desafían a innovar y sobresalir.</p>
                 </div>
             </div>
         </div>
