--- a/index.html
+++ b/index.html
@@ -94,16 +94,16 @@
                     <span class="badge">Marcas aliadas</span>
                     <div class="brand-grid col-lg-8 col-xl-6">
                         <div class="brand-img"><img
-                                src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/03.marcas/Grainger.png?raw=true"
+                                src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/03.marcas/logo_1.png?raw=true"
                                 alt="logo"></div>
                         <div class="brand-img"><img
-                                src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/03.marcas/logo2.png?raw=true"
+                                src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/03.marcas/Logo_2.png?raw=true"
                                 alt="logo"></div>
                         <div class="brand-img"><img
-                                src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/03.marcas/logo3.png?raw=true"
+                                src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/03.marcas/logo_3.png?raw=true"
                                 alt="logo"></div>
                         <div class="brand-img"><img
-                                src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/03.marcas/logo4.png?raw=true"
+                                src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/03.marcas/log_4.png?raw=true"
                                 alt="logo"></div>
                     </div>
                     <p class="col-md-8 col-xl-5">Es un honor para nosotros asociarnos con clientes visionarios que nos
