--- a/index.html
+++ b/index.html
@@ -95,16 +95,16 @@
                     <div class="brand-grid col-lg-8 col-xl-6">
                         <div class="brand-img"><img
                                 src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/03.marcas/logo_1.png?raw=true"
-                                alt="logo"></div>
+                                alt="logo Greinger"></div>
                         <div class="brand-img"><img
                                 src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/03.marcas/Logo_2.png?raw=true"
-                                alt="logo"></div>
+                                alt="logo invesa"></div>
                         <div class="brand-img"><img
                                 src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/03.marcas/logo_3.png?raw=true"
-                                alt="logo"></div>
+                                alt="logo jushi"></div>
                         <div class="brand-img"><img
                                 src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/03.marcas/log_4.png?raw=true"
-                                alt="logo"></div>
+                                alt="logo norton"></div>
                     </div>
                     <p class="col-md-8 col-xl-5">Es un honor para nosotros asociarnos con clientes visionarios que nos
                         desafían a innovar y sobresalir.</p>
@@ -131,7 +131,7 @@
                         <div class="grid-md">
                             <div class="card">
                                 <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/04.products/torniller%C3%ADa.png?raw=true"
-                                    alt="">
+                                    alt="tornillería">
                                 <div class="card-title">
                                     <h3>Tornillería</h3>
                                     <p>Amplia gama de tornillos, tuercas
@@ -140,7 +140,7 @@
                             </div>
                             <div class="card">
                                 <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/04.products/abrasivos.png?raw=true"
-                                    alt="">
+                                    alt="abrasivos">
                                 <div class="card-title">
                                     <h3>Abrasivos</h3>
                                     <p>Discos, lijas y herramientas abrasivas
@@ -151,7 +151,7 @@
                         <div class="grid-md">
                             <div class="card">
                                 <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/04.products/adhesivos.png?raw=true"
-                                    alt="">
+                                    alt="adhesivos">
                                 <div class="card-title">
                                     <h3>Adhesivos y Sellantes</h3>
                                     <p>Soluciones de pegado y sellado
@@ -160,7 +160,7 @@
                             </div>
                             <div class="card">
                                 <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/04.products/resina.png?raw=true"
-                                    alt="">
+                                    alt="resina">
                                 <div class="card-title">
                                     <h3>Resina y Fibra de Vidrio</h3>
                                     <p>Materiales resistentes y duraderos para reparaciones estructurales.</p>
@@ -225,19 +225,19 @@
                 <div class="container-gallery">
                     <div class="grid">
                         <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/05.gallery/img.png?raw=true"
-                            alt="">
+                            alt="Aplicación de pintura en aerosol industrial Tekbond en proceso de mantenimiento">
                         <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/05.gallery/img-1.png?raw=true"
-                            alt="">
+                            alt="Uso de amoladora angular con disco abrasivo generando chispas">
                         <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/05.gallery/img-2.png?raw=true"
-                            alt="">
+                            alt="Pernos industriales negros de alta resistencia organizados en grupo">
                     </div>
                     <div class="grid">
                         <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/05.gallery/img-3.png?raw=true"
-                            alt="">
+                            alt="Conjunto de pernos en forma de U de acero inoxidable organizados en caja">
                         <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/05.gallery/img-4.png?raw=true"
-                            alt="">
+                            alt="Rollo de fibra de vidrio tejida para uso industrial">
                         <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/05.gallery/img-5.png?raw=true"
-                            alt="">
+                            alt="Aplicación de adhesivo industrial en componentes de motor durante mantenimiento mecánico">
                     </div>
                     <div class="banner-cta">
                         <div class="title-description col-md-8 col-xl-6">
