--- a/index.html
+++ b/index.html
@@ -224,19 +224,19 @@
             <div class="row">
                 <div class="container-gallery">
                     <div class="grid">
-                        <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/05.gallery/img.png?raw=true"
+                        <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/05.gallery/spray-pintura-industrial-tekbond.png?raw=true"
                             alt="Aplicación de pintura en aerosol industrial Tekbond en proceso de mantenimiento">
-                        <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/05.gallery/img-1.png?raw=true"
+                        <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/05.gallery/amoladora-angular-chispas-abrasivo.png?raw=true"
                             alt="Uso de amoladora angular con disco abrasivo generando chispas">
-                        <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/05.gallery/img-2.png?raw=true"
+                        <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/05.gallery/pernos-industriales-negros.png?raw=true"
                             alt="Pernos industriales negros de alta resistencia organizados en grupo">
                     </div>
                     <div class="grid">
-                        <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/05.gallery/img-3.png?raw=true"
+                        <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/05.gallery/pernos-u-acero-inoxidable.png?raw=true"
                             alt="Conjunto de pernos en forma de U de acero inoxidable organizados en caja">
-                        <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/05.gallery/img-4.png?raw=true"
+                        <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/05.gallery/fibra-de-vidrio-industrial.png?raw=true"
                             alt="Rollo de fibra de vidrio tejida para uso industrial">
-                        <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/05.gallery/img-5.png?raw=true"
+                        <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/05.gallery/adhesivo-industrial-motor.png?raw=true"
                             alt="Aplicación de adhesivo industrial en componentes de motor durante mantenimiento mecánico">
                     </div>
                     <div class="banner-cta">
