update whatsapp button

--- a/category_detail.html
+++ b/category_detail.html
@@ -253,9 +253,8 @@
                             <p class="col-xl-10">En Mac Master Importadores estamos para ayudarte a encontrar justo lo
                                 que
                                 tu negocio necesita. Escribinos y recibí asesoría personalizada en minutos.</p>
-                            <button type="button" class="btn"
-                                onclick="window.open('https://wa.me/573177899482?text=Hola%2C%20estoy%20interesado%20en%20sus%20productos%20de%20tornillería%20y%20resinas.%20¿Podrían%20brindarme%20más%20información%3F', '_blank')">
-                                Habla con un asesor
+                            <button type="button" class="btn">
+                                <a href="https://wa.me/573177899482?text=Hola%2C%20estoy%20interesado%20en%20sus%20productos%20de%20tornillería%20y%20resinas.%20¿Podrían%20brindarme%20más%20información%3F" target="_blank">Habla con un asesor</a>
                             </button>
                         </div>
                         <div class="data col-sm-12 col-lg-6">
