--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                             </div>
                         </div>
                     </div>
-                    <a class="btn btn-primary" href="#">Explora nuestros Productos</a>
+                    <a class="btn btn-primary" href="products.html">Explora nuestros Productos</a>
                 </div>
             </div>
         </div>
