--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         <div class="grid-md">
                             <div class="card">
                                 <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/04.products/torniller%C3%ADa.png?raw=true"
-                                    alt="tornillería">
+                                    alt="Tornillos y tuercas metálicos sobre fondo rústico, amplia gama para fijaciones industriales">
                                 <div class="card-title">
                                     <h3>Tornillería</h3>
                                     <p>Amplia gama de tornillos, tuercas
@@ -140,7 +140,7 @@
                             </div>
                             <div class="card">
                                 <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/04.products/abrasivos.png?raw=true"
-                                    alt="abrasivos">
+                                    alt="Discos abrasivos Norton para corte y desbaste, ideales para acabados precisos">
                                 <div class="card-title">
                                     <h3>Abrasivos</h3>
                                     <p>Discos, lijas y herramientas abrasivas
@@ -151,7 +151,7 @@
                         <div class="grid-md">
                             <div class="card">
                                 <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/04.products/adhesivos.png?raw=true"
-                                    alt="adhesivos">
+                                    alt="Aplicación de silicona industrial en vidrio, con cartuchos de sellador visibles">
                                 <div class="card-title">
                                     <h3>Adhesivos y Sellantes</h3>
                                     <p>Soluciones de pegado y sellado
@@ -160,7 +160,7 @@
                             </div>
                             <div class="card">
                                 <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/04.products/resina.png?raw=true"
-                                    alt="resina">
+                                    alt="Hilos de fibra de vidrio blanca para reparaciones estructurales y refuerzos duraderos">
                                 <div class="card-title">
                                     <h3>Resina y Fibra de Vidrio</h3>
                                     <p>Materiales resistentes y duraderos para reparaciones estructurales.</p>
