--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     <div class="grid-products col-lg-10 offset-lg-1">
                         <div class="grid-md">
                             <div class="card">
-                                <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/04.products/torniller%C3%ADa.png?raw=true"
+                                <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/04.products/tornillos-tuercas-fijaciones-industriales.png?raw=true"
                                     alt="Tornillos y tuercas metálicos sobre fondo rústico, amplia gama para fijaciones industriales">
                                 <div class="card-title">
                                     <h3>Tornillería</h3>
@@ -139,7 +139,7 @@
                                 </div>
                             </div>
                             <div class="card">
-                                <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/04.products/abrasivos.png?raw=true"
+                                <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/04.products/discos-abrasivos-norton-corte-desbaste.png?raw=true"
                                     alt="Discos abrasivos Norton para corte y desbaste, ideales para acabados precisos">
                                 <div class="card-title">
                                     <h3>Abrasivos</h3>
@@ -150,7 +150,7 @@
                         </div>
                         <div class="grid-md">
                             <div class="card">
-                                <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/04.products/adhesivos.png?raw=true"
+                                <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/04.products/sellador-silicona-industrial-aplicacion-vidrio.png?raw=true"
                                     alt="Aplicación de silicona industrial en vidrio, con cartuchos de sellador visibles">
                                 <div class="card-title">
                                     <h3>Adhesivos y Sellantes</h3>
@@ -159,7 +159,7 @@
                                 </div>
                             </div>
                             <div class="card">
-                                <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/04.products/resina.png?raw=true"
+                                <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/01.Inicio/04.products/fibra-de-vidrio-resina-reparaciones-estructurales.png?raw=true"
                                     alt="Hilos de fibra de vidrio blanca para reparaciones estructurales y refuerzos duraderos">
                                 <div class="card-title">
                                     <h3>Resina y Fibra de Vidrio</h3>
