update img link products

--- a/category.html
+++ b/category.html
@@ -74,28 +74,28 @@
                             <div class="content-card grid-4 col-12">
                                 <div class="card col-xxl-3">
                                     <a href="category_detail.html">
-                                        <img src="Assets/04-ctegories/01.tonillería/01.pernos y tornillos/Tornillos-de-cabeza-hexagonal.png"
+                                        <img src="Assets/04-categories/01.tonillería/01.pernos y tornillos/Tornillos-de-cabeza-hexagonal.png"
                                             alt="Pernos de cabeza hexagonal">
                                         <h4>Pernos de cabeza hexagonal</h4>
                                     </a>
                                 </div>
                                 <div class="card col-xxl-3">
                                     <a href="#">
-                                        <img src="Assets/04-ctegories/01.tonillería/01.pernos y tornillos/Tornillos-de-cabeza-hueca.png"
+                                        <img src="Assets/04-categories/01.tonillería/01.pernos y tornillos/Tornillos-de-cabeza-hueca.png"
                                             alt="Tornillos de cabeza hueca">
                                         <h4>Tornillos de cabeza hueca</h4>
                                     </a>
                                 </div>
                                 <div class="card col-xxl-3">
                                     <a href="#">
-                                        <img src="Assets/04-ctegories/01.tonillería/01.pernos y tornillos/Tornillos-para-taladrar-y-roscar.png"
+                                        <img src="Assets/04-categories/01.tonillería/01.pernos y tornillos/Tornillos-para-taladrar-y-roscar.png"
                                             alt="Tornillos para taladrar y roscar">
                                         <h4>Tornillos para taladrar y roscar</h4>
                                     </a>
                                 </div>
                                 <div class="card col-xxl-3">
                                     <a href="#">
-                                        <img src="Assets/04-ctegories/01.tonillería/01.pernos y tornillos/Tornillo-para-maquina.png"
+                                        <img src="Assets/04-categories/01.tonillería/01.pernos y tornillos/Tornillo-para-maquina.png"
                                             alt="Tornillos para máquina">
                                         <h4>Tornillos para máquina</h4>
                                     </a>
@@ -106,21 +106,21 @@
                             <div class="content-card grid-3 col-12 col-md-9">
                                 <div class="card col-sm-4">
                                     <a href="#">
-                                        <img src="Assets/04-ctegories/01.tonillería/01.pernos y tornillos/Perno-de-ojo.png"
+                                        <img src="Assets/04-categories/01.tonillería/01.pernos y tornillos/Perno-de-ojo.png"
                                             alt="Pernos de ojo">
                                         <h4>Pernos de ojo</h4>
                                     </a>
                                 </div>
                                 <div class="card col-sm-4">
                                     <a href="#">
-                                        <img src="Assets/04-ctegories/01.tonillería/01.pernos y tornillos/Perno-en-U.png"
+                                        <img src="Assets/04-categories/01.tonillería/01.pernos y tornillos/Perno-en-U.png"
                                             alt="Pernos en U">
                                         <h4>Pernos en U</h4>
                                     </a>
                                 </div>
                                 <div class="card col-sm-4">
                                     <a href="#">
-                                        <img src="Assets/04-ctegories/01.tonillería/01.pernos y tornillos/Pernos-de-cabeza-redonda.png"
+                                        <img src="Assets/04-categories/01.tonillería/01.pernos y tornillos/Pernos-de-cabeza-redonda.png"
                                             alt="Pernos de cabeza redonda">
                                         <h4>Pernos de cabeza redonda</h4>
                                     </a>
