--- a/category_detail.html
+++ b/category_detail.html
@@ -76,32 +76,32 @@
                             <h3>Clase del material</h3>
                             <div class="content-card grid-6 col-12">
                                 <div class="card col-lg-2">
-                                    <img src="Assets/04-ctegories/01.tonillería/01.pernos y tornillos/Tornillos-de-cabeza-hexagonal.png"
+                                    <img src="Assets/04-categories/01.tonillería/01.pernos y tornillos/01.tornillo cabeza hexagonal/Acero_baja_resistencia.png"
                                         alt="Acero baja resistencia">
                                     <h4>Acero baja resistencia</h4>
                                 </div>
                                 <div class="card col-lg-2">
-                                    <img src="Assets/04-ctegories/01.tonillería/01.pernos y tornillos/Tornillos-de-cabeza-hueca.png"
+                                    <img src="Assets/04-categories/01.tonillería/01.pernos y tornillos/01.tornillo cabeza hexagonal/Acero_grado_5.png"
                                         alt="Acero grado 5">
                                     <h4>Acero grado 5</h4>
                                 </div>
                                 <div class="card col-lg-2">
-                                    <img src="Assets/04-ctegories/01.tonillería/01.pernos y tornillos/Tornillos-para-taladrar-y-roscar.png"
+                                    <img src="Assets/04-categories/01.tonillería/01.pernos y tornillos/01.tornillo cabeza hexagonal/Acero_grado_8.png"
                                         alt="Acero grado 8">
                                     <h4>Acero grado 8</h4>
                                 </div>
                                 <div class="card col-lg-2">
-                                    <img src="Assets/04-ctegories/01.tonillería/01.pernos y tornillos/Tornillo-para-maquina.png"
+                                    <img src="Assets/04-categories/01.tonillería/01.pernos y tornillos/01.tornillo cabeza hexagonal/Acero_grado_9.png"
                                         alt="Acero grado 9">
                                     <h4>Acero grado 9</h4>
                                 </div>
                                 <div class="card col-lg-2">
-                                    <img src="Assets/04-ctegories/01.tonillería/01.pernos y tornillos/Tornillo-para-maquina.png"
+                                    <img src="Assets/04-categories/01.tonillería/01.pernos y tornillos/01.tornillo cabeza hexagonal/Acero_de_clase_8.8.png"
                                         alt="Acero de clase 8.8">
                                     <h4>Acero de clase 8.8</h4>
                                 </div>
                                 <div class="card col-lg-2">
-                                    <img src="Assets/04-ctegories/01.tonillería/01.pernos y tornillos/Tornillo-para-maquina.png"
+                                    <img src="Assets/04-categories/01.tonillería/01.pernos y tornillos/01.tornillo cabeza hexagonal/Acero_de_clase_10.9.png"
                                         alt="Acero de clase 10.9">
                                     <h4>Acero de clase 10.9</h4>
                                 </div>
@@ -110,32 +110,32 @@
                         <div class="product-card">
                             <div class="content-card grid-6 col-12">
                                 <div class="card col-lg-2">
-                                    <img src="Assets/04-ctegories/01.tonillería/01.pernos y tornillos/Tornillos-de-cabeza-hexagonal.png"
+                                    <img src="Assets/04-categories/01.tonillería/01.pernos y tornillos/01.tornillo cabeza hexagonal/Acero_inoxidable_18-8.png"
                                         alt="Acero inoxidable 18-8">
                                     <h4>Acero inoxidable 18-8</h4>
                                 </div>
                                 <div class="card col-lg-2">
-                                    <img src="Assets/04-ctegories/01.tonillería/01.pernos y tornillos/Tornillos-de-cabeza-hueca.png"
+                                    <img src="Assets/04-categories/01.tonillería/01.pernos y tornillos/01.tornillo cabeza hexagonal/Acero_inoxidable_316.png"
                                         alt="Acero inoxidable 316">
                                     <h4>Acero inoxidable 316</h4>
                                 </div>
                                 <div class="card col-lg-2">
-                                    <img src="Assets/04-ctegories/01.tonillería/01.pernos y tornillos/Tornillos-para-taladrar-y-roscar.png"
+                                    <img src="Assets/04-categories/01.tonillería/01.pernos y tornillos/01.tornillo cabeza hexagonal/Acero_inoxidable_A2.png"
                                         alt="Acero inoxidable A2">
                                     <h4>Acero inoxidable A2</h4>
                                 </div>
                                 <div class="card col-lg-2">
-                                    <img src="Assets/04-ctegories/01.tonillería/01.pernos y tornillos/Tornillo-para-maquina.png"
+                                    <img src="Assets/04-categories/01.tonillería/01.pernos y tornillos/01.tornillo cabeza hexagonal/Acero_inoxidable_A4.png"
                                         alt="Acero inoxidable A4">
                                     <h4>Acero inoxidable A4</h4>
                                 </div>
                                 <div class="card col-lg-2">
-                                    <img src="Assets/04-ctegories/01.tonillería/01.pernos y tornillos/Tornillo-para-maquina.png"
+                                    <img src="Assets/04-categories/01.tonillería/01.pernos y tornillos/01.tornillo cabeza hexagonal/Acero_grado_8_mano_izquierda.png"
                                         alt="Acero grado 8 mano izquierda">
                                     <h4>Acero grado 8 mano izquierda</h4>
                                 </div>
                                 <div class="card col-lg-2">
-                                    <img src="Assets/04-ctegories/01.tonillería/01.pernos y tornillos/Tornillo-para-maquina.png"
+                                    <img src="Assets/04-categories/01.tonillería/01.pernos y tornillos/01.tornillo cabeza hexagonal/Acero_inoxidable_18-8_mano_izquierda.png"
                                         alt="Acero inoxidable 18-8 mano izquierda">
                                     <h4>Acero inoxidable 18-8 mano izquierda</h4>
                                 </div>
