--- a/category_detail.html
+++ b/category_detail.html
@@ -72,9 +72,9 @@
                         roscados en diferentes materiales, diámetros y acabados, ideales para procesos de
                         manufactura, mantenimiento y ensamble.</p>
                     <div class="grid-products col-md-12">
-                        <div class="product-card tornilleria">
-                            <h3>Clase del material</h3>
-                            <div class="content-card grid-6 col-12">
+                        <h3>Clase del material</h3>
+                        <div class="content-card">
+                            <div class="first-row-card col-12">
                                 <div class="card col-lg-2">
                                     <img src="Assets/04-categories/01.tonillería/01.pernos y tornillos/01.tornillo cabeza hexagonal/Acero_baja_resistencia.png"
                                         alt="Acero baja resistencia">
@@ -100,15 +100,13 @@
                                         alt="Acero de clase 8.8">
                                     <h4>Acero de clase 8.8</h4>
                                 </div>
-                                <div class="card col-lg-2">
+                                <div class="card last-card col-lg-2">
                                     <img src="Assets/04-categories/01.tonillería/01.pernos y tornillos/01.tornillo cabeza hexagonal/Acero_de_clase_10.9.png"
                                         alt="Acero de clase 10.9">
                                     <h4>Acero de clase 10.9</h4>
                                 </div>
                             </div>
-                        </div>
-                        <div class="product-card">
-                            <div class="content-card grid-6 col-12">
+                            <div class="second-row-card col-12">
                                 <div class="card col-lg-2">
                                     <img src="Assets/04-categories/01.tonillería/01.pernos y tornillos/01.tornillo cabeza hexagonal/Acero_inoxidable_18-8.png"
                                         alt="Acero inoxidable 18-8">
@@ -254,7 +252,8 @@
                                 que
                                 tu negocio necesita. Escribinos y recibí asesoría personalizada en minutos.</p>
                             <button type="button" class="btn">
-                                <a href="https://wa.me/573177899482?text=Hola%2C%20estoy%20interesado%20en%20sus%20productos%20de%20tornillería%20y%20resinas.%20¿Podrían%20brindarme%20más%20información%3F" target="_blank">Habla con un asesor</a>
+                                <a href="https://wa.me/573177899482?text=Hola%2C%20estoy%20interesado%20en%20sus%20productos%20de%20tornillería%20y%20resinas.%20¿Podrían%20brindarme%20más%20información%3F"
+                                    target="_blank">Habla con un asesor</a>
                             </button>
                         </div>
                         <div class="data col-sm-12 col-lg-6">
