--- a/category.html
+++ b/category.html
@@ -74,7 +74,7 @@
                             <div class="content-card grid-4 col-12">
                                 <div class="card col-xxl-3">
                                     <a href="category_detail.html">
-                                        <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/04-categories/Pernos_de_cabeza_hexagonal.png?raw=true"
+                                        <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/04-categories/01.toniller%C3%ADa/02.subcategorias/01.%20Tornilleria/Pernos_de_cabeza_hexagonal.png"
                                             alt="Pernos de cabeza hexagonal">
                                         <h4>Pernos de cabeza hexagonal</h4>
                                     </a>
