--- a/category.html
+++ b/category.html
@@ -74,28 +74,28 @@
                             <div class="content-card grid-4 col-12">
                                 <div class="card col-xxl-3">
                                     <a href="category_detail.html">
-                                        <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/04-categories/01.toniller%C3%ADa/02.subcategorias/01.%20Tornilleria/Pernos_de_cabeza_hexagonal.png"
+                                        <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/04-categories/01.toniller%C3%ADa/02.subcategorias/01.%20Tornilleria/Pernos_de_cabeza_hexagonal.png?raw=true"
                                             alt="Pernos de cabeza hexagonal">
                                         <h4>Pernos de cabeza hexagonal</h4>
                                     </a>
                                 </div>
                                 <div class="card col-xxl-3">
                                     <a href="#">
-                                        <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/04-categories/Tornillos_de_cabeza_hueca.png?raw=true"
+                                        <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/04-categories/01.toniller%C3%ADa/02.subcategorias/01.%20Tornilleria/Tornillos_de_cabeza_hueca.png?raw=true"
                                             alt="Tornillos de cabeza hueca">
                                         <h4>Tornillos de cabeza hueca</h4>
                                     </a>
                                 </div>
                                 <div class="card col-xxl-3">
                                     <a href="#">
-                                        <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/04-categories/Tornillos_para_taladrar_roscar.png?raw=true"
+                                        <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/04-categories/01.toniller%C3%ADa/02.subcategorias/01.%20Tornilleria/Tornillos_para_taladrar_roscar.png?raw=true"
                                             alt="Tornillos para taladrar y roscar">
                                         <h4>Tornillos para taladrar y roscar</h4>
                                     </a>
                                 </div>
                                 <div class="card col-xxl-3">
                                     <a href="#">
-                                        <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/04-categories/Tornillos_para_m%C3%A1quina.png?raw=true"
+                                        <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/04-categories/01.toniller%C3%ADa/02.subcategorias/01.%20Tornilleria/Tornillos_para_m%C3%A1quina.png?raw=true"
                                             alt="Tornillos para máquina">
                                         <h4>Tornillos para máquina</h4>
                                     </a>
@@ -106,21 +106,21 @@
                             <div class="content-card grid-3 col-12 col-md-9">
                                 <div class="card col-sm-4">
                                     <a href="#">
-                                        <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/04-categories/Pernos_de_ojo.png?raw=true"
+                                        <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/04-categories/01.toniller%C3%ADa/02.subcategorias/01.%20Tornilleria/Pernos_de_ojo.png?raw=true"
                                             alt="Pernos de ojo">
                                         <h4>Pernos de ojo</h4>
                                     </a>
                                 </div>
                                 <div class="card col-sm-4">
                                     <a href="#">
-                                        <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/04-categories/Pernos_en_U.png?raw=true"
+                                        <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/04-categories/01.toniller%C3%ADa/02.subcategorias/01.%20Tornilleria/Pernos_en_U.png?raw=true"
                                             alt="Pernos en U">
                                         <h4>Pernos en U</h4>
                                     </a>
                                 </div>
                                 <div class="card col-sm-4">
                                     <a href="#">
-                                        <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/04-categories/Pernos_de_cabeza_redonda.png?raw=true"
+                                        <img src="https://github.com/MacMaster25/MacMaster-Web/blob/main/Assets/04-categories/01.toniller%C3%ADa/02.subcategorias/01.%20Tornilleria/Pernos_de_cabeza_redonda.png?raw=true"
                                             alt="Pernos de cabeza redonda">
                                         <h4>Pernos de cabeza redonda</h4>
                                     </a>
